--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,14 +9,14 @@ loginPass.invalid = Incorrect login or password
 book.notfound = Book with id: {0} not found
 bookId.invalid = Not valid book id
 book.added = New book successfully added
+book.deleted = Book successfully deleted
 isbn.invalid = ISBN: not valid format (use 10 numbers)
-title.required = Title: required
+title.required=Title: required
 imageUrl.required = Image url: required
 imageUrl.invalid = Image url: not valid format
 authorName.required =  Author name: required
 isbn.required = ISBN: required
 publisher.required = Publisher: required
-
 common.error = Internal error. Try again later
 
 
